RESOLVED FIXED 153592
[css-grid] Store lines instead of tracks in GridResolvedPosition
https://bugs.webkit.org/show_bug.cgi?id=153592
Summary [css-grid] Store lines instead of tracks in GridResolvedPosition
Manuel Rego Casasnovas
Reported 2016-01-28 07:19:44 PST
First step in the plan described in meta-bug #153488 would be to store grid lines indexes instead of track indexes in GridResolvedPosition. This will mean port the following patch from Blink: https://codereview.chromium.org/1451883002/
Attachments
Patch (28.67 KB, patch)
2016-01-28 07:29 PST, Manuel Rego Casasnovas
no flags
Manuel Rego Casasnovas
Comment 1 2016-01-28 07:29:24 PST
Sergio Villar Senin
Comment 2 2016-01-28 09:56:34 PST
Comment on attachment 270114 [details] Patch Makes total sense
WebKit Commit Bot
Comment 3 2016-01-29 01:22:36 PST
Comment on attachment 270114 [details] Patch Clearing flags on attachment: 270114 Committed r195808: <http://trac.webkit.org/changeset/195808>
WebKit Commit Bot
Comment 4 2016-01-29 01:22:39 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.