Source/WebCore/css/StyleBuilderConverter.h
@@ -880,7 +880,7 @@ inline void StyleBuilderConverter::createImplicitNamedGridLinesFromGridArea(cons
         }
         {
             auto& endVector = namedGridLines.add(area.key + "-end", Vector<unsigned>()).iterator->value;
-            endVector.append(areaSpan.resolvedFinalPosition.next().toInt());
+            endVector.append(areaSpan.resolvedFinalPosition.toInt());
             std::sort(endVector.begin(), endVector.end());
         }
     }
